crates/dat0-ui/tests/snapshots/visual_snapshot__grid__populated.snap
---
source: crates/dat0-ui/tests/visual_snapshot.rs
expression: "rendered[0].1"
---
<div class="d0-scene" data-scene="grid/populated" style="width: 1440px; height: 900px; overflow: hidden">
<div class="d0-grid" data-a11y-id="grid" role="grid">
<div class="d0-grid-head" data-a11y-id="grid-head" role="row">
<div style="position: absolute; top: 0; left: -0px; width: 400px; height: 26px;">
<div class="d0-colheader" data-a11y-id="col-0" role="columnheader" aria-label="id" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">
<div class="d0-grip" data-a11y-id="col-grip-0" style="width: 6px;" draggable=true>
</div>
<span style="flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis;">id</span>
<button class="d0-sort" data-a11y-id="col-sort-0" aria-label="Sort column: id" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<button class="d0-funnel" data-a11y-id="col-funnel-0" aria-label="Filter column: id" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<div class="d0-col-resize" data-a11y-id="col-resize-0">
</div>
</div>
<div class="d0-colheader" data-a11y-id="col-1" role="columnheader" aria-label="region" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">
<div class="d0-grip" data-a11y-id="col-grip-1" style="width: 6px;" draggable=true>
</div>
<span style="flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis;">region</span>
<button class="d0-sort" data-a11y-id="col-sort-1" aria-label="Sort column: region" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<button class="d0-funnel" data-a11y-id="col-funnel-1" aria-label="Filter column: region" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<div class="d0-col-resize" data-a11y-id="col-resize-1">
</div>
</div>
<div class="d0-colheader" data-a11y-id="col-2" role="columnheader" aria-label="revenue" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">
<div class="d0-grip" data-a11y-id="col-grip-2" style="width: 6px;" draggable=true>
</div>
<span style="flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis;">revenue</span>
<button class="d0-sort" data-a11y-id="col-sort-2" aria-label="Sort column: revenue" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<button class="d0-funnel" data-a11y-id="col-funnel-2" aria-label="Filter column: revenue" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<div class="d0-col-resize" data-a11y-id="col-resize-2">
</div>
</div>
<div class="d0-colheader" data-a11y-id="col-3" role="columnheader" aria-label="active" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">
<div class="d0-grip" data-a11y-id="col-grip-3" style="width: 6px;" draggable=true>
</div>
<span style="flex: 1 1 auto; overflow: hidden; text-overflow: ellipsis;">active</span>
<button class="d0-sort" data-a11y-id="col-sort-3" aria-label="Sort column: active" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<button class="d0-funnel" data-a11y-id="col-funnel-3" aria-label="Filter column: active" tabindex="-1" style="width: 20px; text-align: center;">
</button>
<div class="d0-col-resize" data-a11y-id="col-resize-3">
</div>
</div>
</div>
</div>
<div class="d0-grid-viewport" data-a11y-id="grid-viewport" tabindex="0">
<div class="d0-grid-canvas" style="width: 400px; height: 312px;" data-top="0">
<div class="d0-grid-row" data-a11y-id="row-0" role="row" aria-rowindex="1" style="top: 0px; width: 400px;">
<div class="d0-cell is-right is-active" data-a11y-id="cell-0-0" role="gridcell" aria-label="id: 1" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">1</div>
<div class="d0-cell" data-a11y-id="cell-0-1" role="gridcell" aria-label="region: north" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">north</div>
<div class="d0-cell is-right" data-a11y-id="cell-0-2" role="gridcell" aria-label="revenue: 1200.500000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1200.500000</div>
<div class="d0-cell" data-a11y-id="cell-0-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-1" role="row" aria-rowindex="2" style="top: 26px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-1-0" role="gridcell" aria-label="id: 2" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">2</div>
<div class="d0-cell" data-a11y-id="cell-1-1" role="gridcell" aria-label="region: south" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">south</div>
<div class="d0-cell is-right" data-a11y-id="cell-1-2" role="gridcell" aria-label="revenue: 830.250000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">830.250000</div>
<div class="d0-cell" data-a11y-id="cell-1-3" role="gridcell" aria-label="active: false" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">false</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-2" role="row" aria-rowindex="3" style="top: 52px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-2-0" role="gridcell" aria-label="id: 3" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">3</div>
<div class="d0-cell" data-a11y-id="cell-2-1" role="gridcell" aria-label="region: east" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">east</div>
<div class="d0-cell is-right" data-a11y-id="cell-2-2" role="gridcell" aria-label="revenue: 1544.000000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1544.000000</div>
<div class="d0-cell" data-a11y-id="cell-2-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-3" role="row" aria-rowindex="4" style="top: 78px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-3-0" role="gridcell" aria-label="id: 4" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">4</div>
<div class="d0-cell" data-a11y-id="cell-3-1" role="gridcell" aria-label="region: west" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">west</div>
<div class="d0-cell is-right" data-a11y-id="cell-3-2" role="gridcell" aria-label="revenue: 610.750000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">610.750000</div>
<div class="d0-cell" data-a11y-id="cell-3-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-4" role="row" aria-rowindex="5" style="top: 104px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-4-0" role="gridcell" aria-label="id: 5" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">5</div>
<div class="d0-cell" data-a11y-id="cell-4-1" role="gridcell" aria-label="region: north" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">north</div>
<div class="d0-cell is-right" data-a11y-id="cell-4-2" role="gridcell" aria-label="revenue: 990.000000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">990.000000</div>
<div class="d0-cell" data-a11y-id="cell-4-3" role="gridcell" aria-label="active: false" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">false</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-5" role="row" aria-rowindex="6" style="top: 130px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-5-0" role="gridcell" aria-label="id: 6" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">6</div>
<div class="d0-cell" data-a11y-id="cell-5-1" role="gridcell" aria-label="region: south" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">south</div>
<div class="d0-cell is-right" data-a11y-id="cell-5-2" role="gridcell" aria-label="revenue: 1310.500000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1310.500000</div>
<div class="d0-cell" data-a11y-id="cell-5-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-6" role="row" aria-rowindex="7" style="top: 156px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-6-0" role="gridcell" aria-label="id: 7" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">7</div>
<div class="d0-cell" data-a11y-id="cell-6-1" role="gridcell" aria-label="region: east" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">east</div>
<div class="d0-cell is-right" data-a11y-id="cell-6-2" role="gridcell" aria-label="revenue: 720.250000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">720.250000</div>
<div class="d0-cell" data-a11y-id="cell-6-3" role="gridcell" aria-label="active: false" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">false</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-7" role="row" aria-rowindex="8" style="top: 182px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-7-0" role="gridcell" aria-label="id: 8" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">8</div>
<div class="d0-cell" data-a11y-id="cell-7-1" role="gridcell" aria-label="region: west" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">west</div>
<div class="d0-cell is-right" data-a11y-id="cell-7-2" role="gridcell" aria-label="revenue: 1425.750000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1425.750000</div>
<div class="d0-cell" data-a11y-id="cell-7-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-8" role="row" aria-rowindex="9" style="top: 208px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-8-0" role="gridcell" aria-label="id: 9" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">9</div>
<div class="d0-cell" data-a11y-id="cell-8-1" role="gridcell" aria-label="region: north" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">north</div>
<div class="d0-cell is-right" data-a11y-id="cell-8-2" role="gridcell" aria-label="revenue: 505.000000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">505.000000</div>
<div class="d0-cell" data-a11y-id="cell-8-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-9" role="row" aria-rowindex="10" style="top: 234px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-9-0" role="gridcell" aria-label="id: 10" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">10</div>
<div class="d0-cell" data-a11y-id="cell-9-1" role="gridcell" aria-label="region: south" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">south</div>
<div class="d0-cell is-right" data-a11y-id="cell-9-2" role="gridcell" aria-label="revenue: 1180.500000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1180.500000</div>
<div class="d0-cell" data-a11y-id="cell-9-3" role="gridcell" aria-label="active: false" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">false</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-10" role="row" aria-rowindex="11" style="top: 260px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-10-0" role="gridcell" aria-label="id: 11" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">11</div>
<div class="d0-cell" data-a11y-id="cell-10-1" role="gridcell" aria-label="region: east" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">east</div>
<div class="d0-cell is-right" data-a11y-id="cell-10-2" role="gridcell" aria-label="revenue: 860.250000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">860.250000</div>
<div class="d0-cell" data-a11y-id="cell-10-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
<div class="d0-grid-row" data-a11y-id="row-11" role="row" aria-rowindex="12" style="top: 286px; width: 400px;">
<div class="d0-cell is-right" data-a11y-id="cell-11-0" role="gridcell" aria-label="id: 12" aria-colindex="1" tabindex="-1" style="left: 0px; width: 100px;">12</div>
<div class="d0-cell" data-a11y-id="cell-11-1" role="gridcell" aria-label="region: west" aria-colindex="2" tabindex="-1" style="left: 100px; width: 100px;">west</div>
<div class="d0-cell is-right" data-a11y-id="cell-11-2" role="gridcell" aria-label="revenue: 1035.000000" aria-colindex="3" tabindex="-1" style="left: 200px; width: 100px;">1035.000000</div>
<div class="d0-cell" data-a11y-id="cell-11-3" role="gridcell" aria-label="active: true" aria-colindex="4" tabindex="-1" style="left: 300px; width: 100px;">true</div>
</div>
</div>
</div>
</div>
</div>
